Prevent caption from covering link-area

--- a/src/style.css
+++ b/src/style.css
@@ -105,6 +105,7 @@ figure {
     border-bottom-right-radius: var(--radius);
     display: flex;
     align-self: end;
+    pointer-events: none;
 }
 
 .item__caption > * {
